monticore-generator/src/test/resources/cocos/invalid/A4001/A4001.mc4
package cocos.invalid.A4001;

grammar A4001 extends mc.grammars.types.TestTypes {

  QualifiedName extends Name;

}